[FLINK-39783][table] Address reviewer feedback